# s3serve

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codelimit.yml  main.yml  release.yml
dependabot/pip/boto3-1.36.11/: report.json
dependabot/pip/boto3-1.36.16/: report.json
dependabot/pip/boto3-1.36.2/: report.json
dependabot/pip/boto3-1.36.21/: report.json
dependabot/pip/boto3-1.36.26/: report.json
dependabot/pip/boto3-1.36.6/: report.json
dependabot/pip/boto3-1.36.7/: report.json
dependabot/pip/boto3-stubs-lite-1.36.11/: report.json
dependabot/pip/boto3-stubs-lite-1.36.16/: report.json
dependabot/pip/boto3-stubs-lite-1.36.2/: report.json
dependabot/pip/boto3-stubs-lite-1.36.21/: report.json
dependabot/pip/boto3-stubs-lite-1.36.26/: report.json
dependabot/pip/boto3-stubs-lite-1.36.6/: report.json
dependabot/pip/fastapi-0.115.7/: codelimit.md  report.json
dependabot/pip/fastapi-0.115.8/: report.json
dependabot/pip/moto-5.0.27/: report.json
dependabot/pip/moto-5.0.28/: report.json
dependabot/pip/pydantic-settings-2.8.0/: report.json
main/: codelimit.md  report.json
s3serve/: __main__.py  app.py  config.py  utils.py
s3serve/routes/: buckets.py
s3serve/schemas/: ListObjectsV2CommonPrefixResponse.py  ListObjectsV2ContentResponse.py  ListObjectsV2Response.py
s3serve/services/: s3_service.py
s3serve/web/: index.html  package.json  vite.config.ts
s3serve/web/src/: App.tsx  index.css  main.tsx  utils.ts
s3serve/web/src/components/: BreadCrumbs.style.tsx  BreadCrumbs.tsx  BucketList.tsx  FolderList.tsx  ImageLightbox.style.tsx  ImageLightbox.tsx  ImageObject.style.tsx  ImageObject.tsx  ImageThumbnailObject.tsx  ObjectGrid.style.tsx  ObjectGrid.tsx
s3serve/web/src/entities/: ListObjectsV2ContentResponse.ts  ListObjectsV2Response.ts
tests/: conftest.py  test_utils.py
tests/fixtures/: aws.py  config.py
tests/routes/: test_buckets.py
tests/services/: test_s3_service.py
