[tool.poetry]
name = "s3serve"
version = "0.1.0"
description = "Simple S3 Server"
authors = ["Rob van der Leek <robvanderleek@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/robvanderleek/s3serve"
repository = "https://github.com/robvanderleek/s3serve.git"

[tool.poetry.scripts]
s3serve = "s3serve.__main__:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = {extras = ["standard"], version = "^0.115.5"}
boto3 = "^1.35.60"
pydantic-settings = "^2.6.1"
boto3-stubs-lite = {extras = ["s3"], version = "^1.35.64"}
pyperclip = "^1.9.0"
typer = "^0.15.1"

[tool.semantic_release]
branch = "main"
version_toml = [ "pyproject.toml:tool.poetry.version" ]
version_variables = [ "s3serve/version.py:version" ]
upload_to_repository = false
upload_to_release = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
moto = {extras = ["s3"], version = "^5.0.20"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
